[package]
name = "set-user-tasks"
version = "0.48.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/dparnell/set-user-tasks"
authors = ["Daniel Parnell <me@danielparnell.com>"]
homepage = "https://github.com/dparnell/set-user-tasks"
license = "CC-BY-4.0"
keywords = ["windows", "taskbar", "SetUserTasks" ]
categories = ["windows"]
description = "set the tasks section on the windows task bar"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_EnhancedStorage"
] }
